Fixed workspace notes

--- a/client/app/modules/admin/project/templates/projectSettings.tpl.html
+++ b/client/app/modules/admin/project/templates/projectSettings.tpl.html
@@ -1,6 +1,6 @@
 <md-content layout="column" >
     <h2 class="center">{{ project.title }} Administration</h2>
-    <md-tabs selected="selectedIndex" center>
+    <md-tabs>
         <md-tab>
             <md-label>
                 <i class='fa fa-list'>Edit</i>
