--- a/client/app/modules/idea/templates/tags-ideas.tpl.html
+++ b/client/app/modules/idea/templates/tags-ideas.tpl.html
@@ -5,9 +5,9 @@
         </div>
     </div>
 </md-toolbar>
-<md-content>
-    <md-button style="width:100%;text-align:right;" ng-class="{ 'md-raised' : $uiRoute }"  ui-sref="ideas({ tag : 'all' })">ALL</md-button>
+<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+    <md-button style="width:100%;text-align:left;" ng-class="{ 'md-raised' : $uiRoute }"  ui-sref="ideas({ tag : 'all' })">ALL</md-button>
     <div ng-repeat="tag in tags">
-        <md-button style="width:100%;text-align:right;" ui-route="/projects/{{tag.title}}" ng-class="{ 'md-raised' : $uiRoute }" ui-sref="ideas({ tag : tag.title })">{{tag.title}}</md-button>
+        <md-button style="width:100%;text-align:left;" ui-route="/projects/{{tag.title}}" ng-class="{ 'md-raised' : $uiRoute }" ui-sref="ideas({ tag : tag.title })">{{tag.title}}</md-button>
     </div>
-</md-content>
+</md-sidenav>
