--- a/client/app/modules/workspace/templates/modal/fileDetailModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/fileDetailModal.tpl.html
@@ -5,8 +5,8 @@
             <md-button class="md-fab" ng-href="{{ fileDetails.url }}" target="_blank">
                 <i class="fa fa-download"></i>
             </md-button>
-            <md-button ng-click="removeFile()" target="_blank">
-                Delete
+            <md-button class="md-fab" ng-click="removeFile()">
+                <i class="fa fa-trash"></i>
             </md-button>
             <md-button class="md-fab" ng-click="cancel()">
                 <i class="fa fa-times"></i>
