--- a/client/app/modules/workspace/templates/modal/fileUploadModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/fileUploadModal.tpl.html
@@ -1,11 +1,12 @@
 <md-dialog>
     <md-toolbar layout="row" layout-align="start end">
         <div flex></div>
-        <div class="faa-spin animated" ng-if="isUploding">
+        <div class="faa-spin animated" ng-if="isUploading">
             <i class="fa fa-spinner fa-2x"></i>
         </div>
+        
         <div ng-if="file">
-            <md-button class="md-fab" ng-click="upload(file,file.description)">
+            <md-button class="md-fab" ng-click="upload(file, file.description)">
                 <i class="fa fa-cloud-upload"></i>
             </md-button>
             <md-button class="md-fab" ng-click="cancelUpload()">
@@ -17,16 +18,10 @@
         </md-button>
     </md-toolbar>
     <md-content>
-        <div class="dropbox"
-             ng-file-drop="fileSelected($files)"
-             ng-file-drag-over-class="dropbox-dragover"
-             style="background-image:url({{ fileUrl }});background-repeat:no-repeat;background-size:contain;background-position:right;" flex>
-            <div>
-                <input ng-if="!file" type="file" ng-file-select="fileSelected($files)"/>
-            </div>
-        </div>
+        <div class="dropbox" ngf-drop ng-model="selectedFiles" ngf-drag-over-class="dropbox-dragover" style="background-image:url({{ fileUrl }});background-repeat:no-repeat;background-size:contain;background-position:right;" flex></div>
+        <md-button ngf-select ng-model="selectedFiles">Pick file or drop above</md-button>
         <md-input-container ng-if="file">
-            <label for="fileDescription">file description...</label>
+            <label for="fileDescription">File description.</label>
             <input id="fileDescription" type="text"  ng-model="file.description" style="width:100%"/>
         </md-input-container>
     </md-content>
