--- a/client/app/modules/workspace/templates/files.tpl.html
+++ b/client/app/modules/workspace/templates/files.tpl.html
@@ -15,6 +15,7 @@
             <md-button ng-click="detailsFileModal($event,file)">
                 {{ file.originalName }}
             </md-button>
+            <span>{{ file.description }}</span>
         </div>
     </md-item>
 </md-list>
