--- a/client/app/modules/workspace/templates/modal/fileUploadModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/fileUploadModal.tpl.html
@@ -18,11 +18,11 @@
         </md-button>
     </md-toolbar>
     <md-content>
-        <div class="dropbox" ngf-drop ng-model="selectedFiles" ngf-drag-over-class="dropbox-dragover" style="background-image:url({{ fileUrl }});background-repeat:no-repeat;background-size:contain;background-position:right;" flex></div>
+        <div class="dropbox" ngf-drop ng-model="selectedFiles" ngf-drag-over-class="dropbox-dragover" style="background-image:url({{ fileUrl }})" flex></div>
         <md-button ngf-select ng-model="selectedFiles">Pick file or drop above</md-button>
-        <md-input-container ng-if="file">
-            <label for="fileDescription">File description.</label>
-            <input id="fileDescription" type="text"  ng-model="file.description" style="width:100%"/>
+        <md-input-container>
+            <label >File description.</label>
+            <input type="text" ng-model="description" />
         </md-input-container>
     </md-content>
 </md-dialog>
