new visual in the feed and the profil

--- a/client/app/modules/profile/templates/feed.tpl.html
+++ b/client/app/modules/profile/templates/feed.tpl.html
@@ -1,8 +1,14 @@
-<section layout="column" layout-fill>
-    <md-toolbar scroll-shrink class="md-theme-green" style="position:relative;">
-        <h1>Notifications</h1>
-    </md-toolbar>
-    <md-content flex>
-        <notification-list notifications="notifications"></notification-list>
-    </md-content>
-</section>
+<md-content>
+	<md-content layout="row" layout-align="center" layout-margin>
+		<section class="md-whiteframe-z1" flex-gt-sm="75" layout="column">
+		    <md-toolbar class="md-theme-green md-default-theme">
+		    	<div class="md-toolbar-tools">
+		        	<h3>Notifications</h3>
+		    	</div>
+		    </md-toolbar>
+		    <md-content>
+		        <notification-list notifications="notifications"></notification-list>
+		    </md-content>
+		</section>
+	</md-content>
+</md-content>
