--- a/client/app/modules/project/templates/project-create.tpl.html
+++ b/client/app/modules/project/templates/project-create.tpl.html
@@ -1,53 +1,59 @@
-<md-content layout="column" layout-fill>
-    <h2>
-        Your project's description
-    </h2>
-    <form name="projectform" layout="column">
-        <input-container>
-            <label>The challenge you are taking on</label>
-            <ui-select ng-model="newProject.container" theme="selectize">
-                <ui-select-match placeholder="The challenge that you are replying to...">{{$select.selected.title}}</ui-select-match>
-                <ui-select-choices repeat="challenge in challenges">
-                    <img ng-src="{{ challenge.poster || '/images/placeholder25x25.png' }}" width="25px" alt="challenge's poster"/>
-                    <small>
-                        {{challenge.title}}
-                    </small>
-                    <div showtags entity="challenge"></div>
-                </ui-select-choices>
-            </ui-select>
-        </input-container>
+<md-content>
+    <md-content layout="row" layout-align="center" layout-margin>
+        <section class="md-whiteframe-z2" flex-gt-sm="75" layout-padding layout="column">
+            <md-content layout="column" layout-fill>
+                <h2>
+                    Your project's description
+                </h2>
+                <form name="projectform" layout="column">
+                    <input-container>
+                        <label>The challenge you are taking on</label>
+                        <ui-select ng-model="newProject.container" theme="selectize">
+                            <ui-select-match placeholder="The challenge that you are replying to...">{{$select.selected.title}}</ui-select-match>
+                            <ui-select-choices repeat="challenge in challenges">
+                                <img ng-src="{{ challenge.poster || '/images/placeholder25x25.png' }}" width="25px" alt="challenge's poster"/>
+                                <small>
+                                    {{challenge.title}}
+                                </small>
+                                <div showtags entity="challenge"></div>
+                            </ui-select-choices>
+                        </ui-select>
+                    </input-container>
 
-        <md-input-container>
-            <label for="title">Project Title</label>
-            <input id="title" type="text" ng-model="newProject.title" required="" ng-change="titleChange(newProject.title)" />
-        </md-input-container>
-        
-        <tag-manager entity="newProject"></tag-manager>
+                    <md-input-container>
+                        <label for="title">Project Title</label>
+                        <input id="title" type="text" ng-model="newProject.title" required="" ng-change="titleChange(newProject.title)" />
+                    </md-input-container>
+                    
+                    <tag-manager entity="newProject"></tag-manager>
 
-        <input-container>
-            <label>Where your project is based</label>
-            <ui-select ng-model="newProject.localisation"
-                       theme="selectize"
-                       reset-search-input="false">
-                <ui-select-match placeholder="Enter your address...">{{$select.selected.formatted_address}}</ui-select-match>
-                <ui-select-choices repeat="address in addresses track by $index"
-                                   refresh="refreshAddresses($select.search)"
-                                   refresh-delay="0">
-                    <div ng-bind-html="address.formatted_address | highlight: $select.search"></div>
-                </ui-select-choices>
-            </ui-select>
-        </input-container>
+                    <input-container>
+                        <label>Where your project is based</label>
+                        <ui-select ng-model="newProject.localisation"
+                                   theme="selectize"
+                                   reset-search-input="false">
+                            <ui-select-match placeholder="Enter your address...">{{$select.selected.formatted_address}}</ui-select-match>
+                            <ui-select-choices repeat="address in addresses track by $index"
+                                               refresh="refreshAddresses($select.search)"
+                                               refresh-delay="0">
+                                <div ng-bind-html="address.formatted_address | highlight: $select.search"></div>
+                            </ui-select-choices>
+                        </ui-select>
+                    </input-container>
 
-        <md-input-container>
-            <label>Brief description:</label>
-            <textarea rows="5" style="width:100%;border:solid 1px darkgray" ng-model="newProject.brief"></textarea>
-        </md-input-container>
+                    <md-input-container>
+                        <label>Brief description:</label>
+                        <textarea rows="5" style="width:100%;border:solid 1px darkgray" ng-model="newProject.brief"></textarea>
+                    </md-input-container>
 
-        <md-button  class="md-raised" type="button" ng-click="createProject(newProject)">
-            <span class="faa-spin animated" ng-if="isLoading">
-                <i class="fa fa-spinner"></i>
-            </span>
-            Create Project
-        </md-button>
-    </form>
+                    <md-button  class="md-raised" type="button" ng-click="createProject(newProject)">
+                        <span class="faa-spin animated" ng-if="isLoading">
+                            <i class="fa fa-spinner"></i>
+                        </span>
+                        Create Project
+                    </md-button>
+                </form>
+            </md-content>
+        </section>
+    </md-content>
 </md-content>
