Mail notifications working

--- a/client/app/modules/header/templates/menu.tpl.html
+++ b/client/app/modules/header/templates/menu.tpl.html
@@ -25,7 +25,7 @@
         <md-button ui-sref="projects.list({ tag : 'all' })" ng-class="{'md-theme-light':$uiRoute}" ui-route="/projects/all">
             Projects
         </md-button>
-        <md-button ui-sref="profileAdmin({ uid : currentUser._id })"  ng-class="{'md-theme-green':$uiRoute}" ui-route="/admin/profile/{{ currentUser._id }}">
+        <md-button ui-sref="profileAdmin"  ng-class="{'md-theme-green':$uiRoute}" ui-route="/admin/profile/{{ currentUser._id }}">
             Edit Profile
         </md-button>
     </div>
