--- a/client/app/modules/admin/profile/templates/edit.tpl.html
+++ b/client/app/modules/admin/profile/templates/edit.tpl.html
@@ -1,14 +1,24 @@
-<section layout="row" layout-fill>
-    <md-sidenav class="md-sidenav-left md-whiteframe-z2 left" component-id="left">
-        <md-content style="padding-left: 20px;" layout="column" layout-fill>
-            <md-toolbar layout="row">
-                <div class="md-toolbar-tools">
-                    <i class="fa fa-caret-left fa-2x my-btn" style="color:black;" ng-click="toggle()" flex></i>
-                    <div>
-                        <i class="fa fa-trophy">Edit your profile</i>
-                    </div>
-                </div>
-            </md-toolbar>
+<section layout="column" layout-fill>
+    <md-toolbar class="md-theme-green" scroll-shrink>
+        <h2 class="center">Edit your profile</h2>
+    </md-toolbar>
+    <md-content flex class="right-part">
+        <form name="basicForm">
+            <md-input-container>
+                <label for="username">User name</label>
+                <input type="text" id="username" ng-model="profile.username"></input>
+            </md-input-container>
+            <ui-select ng-model="profile.localisation"
+                       theme="selectize"
+                       reset-search-input="false">
+                <ui-select-match placeholder="Enter an address...">{{$select.selected.formatted_address}}</ui-select-match>
+                <ui-select-choices repeat="address in addresses track by $index"
+                                   refresh="refreshAddresses($select.search)"
+                                   refresh-delay="0">
+                    <div ng-bind-html="address.formatted_address | highlight: $select.search"></div>
+                </ui-select-choices>
+            </ui-select>
+            <tag-manager entity='profile' ng-model='profile.tags'></tag-manager>
             <section layout="column">
                 <md-button ng-click="editPageModal()">
                     Edit your personal page
@@ -31,36 +41,9 @@
                     <md-checkbox ng-model="profile.mailNotification">
                         Email
                     </md-checkbox>
-                    <md-button class="md-raised" ng-click="updateProfile()" style="width:100%;">
-                        Save
-                    </md-button>
                 </section>
             </section>
-        </md-content>
-    </md-sidenav>
-    <section layout="column" layout-fill>
-        <md-toolbar class="md-theme-green" scroll-shrink>
-            <h2 class="center">Edit your profile !</h2>
-        </md-toolbar>
-        <md-content flex class="right-part">
-            <form name="basicForm">
-                <md-input-container>
-                    <label for="username">User name</label>
-                    <input type="text" id="username" ng-model="profile.username"></input>
-                </md-input-container>
-                <ui-select ng-model="profile.localisation"
-                           theme="selectize"
-                           reset-search-input="false">
-                    <ui-select-match placeholder="Enter an address...">{{$select.selected.formatted_address}}</ui-select-match>
-                    <ui-select-choices repeat="address in addresses track by $index"
-                                       refresh="refreshAddresses($select.search)"
-                                       refresh-delay="0">
-                        <div ng-bind-html="address.formatted_address | highlight: $select.search"></div>
-                    </ui-select-choices>
-                </ui-select>
-                <tag-manager entity='profile' ng-model='profile.tags'></tag-manager>
-                <md-button style="width:100%;" class="md-raised"  ng-click="updateProfile(profile)">Update Profile</md-button>
-            </form>
-        </md-content>
-    </section>
+            <md-button style="width:100%;" class="md-raised"  ng-click="updateProfile(profile)">Update Profile</md-button>
+        </form>
+    </md-content>
 </section>
