--- a/client/app/modules/workspace/templates/modal/addResourceModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/addResourceModal.tpl.html
@@ -16,7 +16,7 @@
         <form name="resourceForm">
             <md-input-container>
                 <label for="title">Link name</label>
-                <input type="text" id="title" ng-model="url.title" required style="width:100%;"/>
+                <input type="text" id="title" ng-model="url.title" required/>
             </md-input-container>
             <md-input-container>
                 <label for="url">URL (http://...)</label>
@@ -24,7 +24,7 @@
             </md-input-container>
             <md-input-container>
                 <label for="description">Description</label>
-                <input type="text" id="description" ng-model="url.description" style="width:100%;"/>
+                <input type="text" id="description" ng-model="url.description"/>
             </md-input-container>
         </form>
     </md-content>
