--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -304,3 +304,17 @@ header{
 .boxContent {
   max-width: 900px;
 }
+
+.update-button {
+  width: 90%;
+  display: block;
+  margin: auto;
+  margin-bottom: 20px;
+  margin-top: 30px;
+}
+
+.img-profile-page {
+  width: 200px;
+  height: 200px;
+  margin: auto;
+}
