Improve edit button of the profile page. Remains to separate h3 more clearely

--- a/client/app/modules/profile/templates/profile.tpl.html
+++ b/client/app/modules/profile/templates/profile.tpl.html
@@ -16,7 +16,7 @@
             </md-toolbar>
 
             <md-content flex layout-padding>
-                <md-button ng-if="profile._id == currentUser._id" ui-sref="profileAdmin" flex>
+                <md-button class="md-raised" ng-if="profile._id == currentUser._id" ui-sref="profileAdmin" flex>
                     <i class="fa fa-pencil-square-o baseColor"></i> Edit
                 </md-button>
                 <showtags entity="profile" style="margin-left: 50px;"></showtags>
