--- a/client/app/modules/challenge/templates/suggest.tpl.html
+++ b/client/app/modules/challenge/templates/suggest.tpl.html
@@ -46,7 +46,7 @@
             </md-input-container>
 
             <div>
-                <md-button style="width:100%;" ng-click="createChallenge(pform)" class="md-raised">{{'BTN_SUBMIT'|translate}}</md-button>
+                <md-button style="width:100%;" ng-click="createChallenge(pform)" class="md-raised" analytics-on analytics-event="createChallenge">{{'BTN_SUBMIT'|translate}}</md-button>
             </div>
         </md-form>
     </md-content>
